--- a/040_to_050.md
+++ b/040_to_050.md
@@ -1,2 +1,11 @@
 ### 0.4.0 to 0.5.0
 
+* Added IMSI information in _SubscriberInfo_.
+
+* Added instance identifier in _ServiceInfo_.
+
+* Added URL & operation for deletion of a specific service instance.
+
+* Added optional human readable information in error cases.
+
+* Clean up in error codes.
