--- a/040_to_050.md
+++ b/040_to_050.md
@@ -2,6 +2,8 @@
 
 * Added IMSI information in _SubscriberInfo_.
 
+* Renamed primary identifier in _ServiceInfo_ from __name__ to __id__.
+
 * Added instance identifier in _ServiceInfo_.
 
 * Added URL & operation for deletion of a specific service instance.
