--- a/040_to_050.md
+++ b/040_to_050.md
@@ -8,6 +8,6 @@
 
 * Added URL & operation for deletion of a specific service instance.
 
-* Added optional human readable information in error cases. This implies that all operations now produces ''.
+* Added optional human readable information in error cases. This implies that all operations now produces content type __application/json__.
 
 * Clean up in error codes.
