--- a/040_to_050.md
+++ b/040_to_050.md
@@ -10,4 +10,4 @@
 
 * Added additional human readable information in error cases. This implies that all operations now produces content type __application/json__.
 
-* Clean up in error codes. Error 404 indicates Subscription not found. Other sub-resources not found are indicated with 400 (Bad Request) and additional error info in the response body.
+* Clean up in error codes. Error 404 (Not Found) indicates Subscription not found. Other sub-resources not found are indicated with 400 (Bad Request) and additional error info in the response body.
