--- a/040_to_050.md
+++ b/040_to_050.md
@@ -1,6 +1,6 @@
 ### 0.4.0 to 0.5.0
 
-* Added IMSI information in _SubscriberInfo_.
+* Added IMSI information in _SubscriptionInfo_. This information is in the form of a list as a subscription may have several IMSI numbers.
 
 * Renamed primary identifier in _ServiceInfo_ from __name__ to __id__.
 
