--- a/040_to_050.md
+++ b/040_to_050.md
@@ -4,7 +4,7 @@
 
 * Renamed primary identifier in _ServiceInfo_ from __name__ to __id__.
 
-* Added instance identifier in _ServiceInfo_.
+* Added instance identifier in _ServiceInfo_. This identifier is optional and only included for Services that allow multiple instances.
 
 * Added URL & operation for deletion of a specific service instance.
 
