--- a/050_to_060.md
+++ b/050_to_060.md
@@ -6,4 +6,7 @@
 
 * Events mechanism added
 
-* OrderId parameter added to asynchronous operation and resource /orders/{orderid} to retreive the status of the request. 
+* OrderId parameter added to asynchronous operations and resource /orders/{orderid} to retreive the status of the request.
+
+* Operation added to change the Subscription state, 
+
