--- a/070_to_080.md
+++ b/070_to_080.md
@@ -3,3 +3,4 @@
 * Added description of batch operations.
 * Added possibility to change ODB profile.
 * Added possibility to set A2P Voice Application Key
+* Added expiration event
