--- a/070_to_080.md
+++ b/070_to_080.md
@@ -2,4 +2,5 @@
 
 * Added description of batch operations.
 * Added possibility to change ODB profile.
-* Added possibility to set A2P Voice Application Key
+* Added possibility to set A2P Voice Application Key.
+* Added requestid parameter to order event.
