--- a/080-to-090.md
+++ b/080-to-090.md
@@ -1,6 +1,12 @@
 ### 0.8.0 to 0.9.0
 
+##### 0.8.0
+
+* Added support for ODB profile
+
 ##### 0.8.2
 
 * Added requestid parameter to order event.
+
+
 
