--- a/080-to-090.md
+++ b/080-to-090.md
@@ -2,10 +2,11 @@
 
 ##### 0.8.0
 
-* Added possibility to change
-  ---
+* Added possibility to change ODB profile.
 
-   ODB profile
+##### 0.8.1
+
+* Added possibility to set A2P Voice Application Key.
 
 ##### 0.8.2
 
