--- a/080-to-090.md
+++ b/080-to-090.md
@@ -11,7 +11,8 @@
 ##### 0.8.2
 
 * Added requestid parameter to order event.
-* Added expiration event
+* Added expiration event.
+* Changed data volume unit from byte to kilobyte.
 
 
 
