--- a/110-to-120.md
+++ b/110-to-120.md
@@ -4,5 +4,9 @@
 
 * Added IMEI and SV to device-change event.
 
+##### 1.1.1
+
+* Corrected invalid JSON in the "Mobile Network information" use case
+
 
 
