--- a/100-to-110.md
+++ b/100-to-110.md
@@ -4,5 +4,9 @@
 
 * ECC API is now 1.0.0, no changes from 0.9.0 except Swagger file version and this guide.
 
+##### 1.0.1
+
+* Added IMEI and SV to device-change event.
+
 
 
